--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 /* AgGrifd */
 @import "~ag-grid-community/dist/styles/ag-grid.css";
@@ -35,4 +36,4 @@
 @import "~ag-grid-community/dist/styles/ag-theme-material.css";
 
 /* Custom */
- @import "theme/tables.scss"; 
+ //@import "theme/tables.scss"; 
