--- a/src/theme/tables.scss
+++ b/src/theme/tables.scss
@@ -16,10 +16,13 @@ th.mat-header-cell {
 .mat-row:nth-child(odd){
     background-color:silver;
     }
-/*.ag-row:nth-child(even){
+.ag-row {
+    height: 35px;
+}
+.ag-row:nth-child(even){
         background-color: LightGray;
         }
     
 .ag-row:nth-child(odd){
         background-color:silver;
-       }    */
+       }
