--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -11,7 +11,7 @@
 </ion-header>
 <ion-content fullscreen>
   <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
-    <ion-list lines="full" class="ion-no-margin ion-no-padding" *ngFor="let key of objectKeys" [ngSwitch]="typeOf(key)">
+    <ion-list lines="full" class="ion-no-margin ion-no-padding" *ngFor="let key of objectKeys" [ngSwitch]="objectService.typeOf(key,object,objectAction)">
       <ion-item *ngSwitchCase="'booleanTrue'">
         <ion-label>{{ key | translate }}</ion-label>
         <ion-toggle slot="start" formControlName="{{key}}" color="secondary" checked></ion-toggle>
@@ -25,12 +25,12 @@
         <!--ion-item *ngIf="editForm.controls[key].hasError('required') && editForm.controls[key].touched"-->
         <ion-label position="stacked" *ngIf="editForm.controls[key].hasError('required')  && editForm.controls[key].touched">{{ 'This field is required!' | translate }}</ion-label>
         <ng-template [ngIf]="objectService.selects[key]"  [ngIfElse]="elseBlock">
-            <ion-select type="text" formControlName="{{key}}"  [compareWith]="compareFn" [required]="required[key]">
+            <ion-select type="text" formControlName="{{key}}"  [compareWith]="compareFn" [required]="objectService.required[key]">
             <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">{{option | translate}}</ion-select-option>
           </ion-select>
         </ng-template>
         <ng-template #elseBlock>
-          <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}" [required]="required[key]"></ion-input>
+          <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}" [required]="objectService.required[key]"></ion-input>
         </ng-template>
       </ion-item>
       <ion-item *ngSwitchCase="'stringRO'">
