--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -46,7 +46,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-        <ag-grid-angular style="width: 100%; height: 100%;"class="ag-theme-material" [gridOptions]="gridOptions"
+        <ag-grid-angular style="width: 100%; height: 100%;"class="ag-theme-balham" [gridOptions]="gridOptions"
         [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
         (gridReady)="onGridReady($event)" (gridSizeChanged)="onGridSizeChange($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
       </ag-grid-angular>
