--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -31,7 +31,7 @@
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular style="width: 100%; height: 450px;" class="ag-theme-balham" [gridOptions]="gridOptions"
-        [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="selection"
+        [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
         (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
