--- a/src/app/protected/protected.page.html
+++ b/src/app/protected/protected.page.html
@@ -1,25 +1,29 @@
 <ion-split-pane contentId="main-content">
-	<ion-menu start=side contentId="main-content" type=overlay>
-  <ion-content>
-    <ion-list id="menu">
-      <ion-list-header>
-        <ion-item lines="none">
-          <ion-thumbnail>
+  <ion-menu start=side contentId="main-content" type=overlay>
+    <ion-content>
+      <ion-list id="menu">
+        <ion-list-header>
+          <ion-item lines="none">
+            <ion-thumbnail>
               <img (click)="toggleMenu()" src="assets/images/logo/cranix_school.svg">
-          </ion-thumbnail>
-          <ion-label>
-            <h3>CRANIX</h3>
-          </ion-label>
-        </ion-item>
-      </ion-list-header>
-      <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-        <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false">
-          <ion-icon size="small" color="#ffffff" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-          <ion-label>{{ p.title | translate }}</ion-label>
-        </ion-item>
-      </ion-menu-toggle>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-<ion-router-outlet id="main-content"></ion-router-outlet>
+            </ion-thumbnail>
+            <ion-label>
+              <h3 *ngIf="authService.isAllowed('cephalix.manage'); else elseBlock">CEPHALIX</h3>
+              <ng-template #elseBlock>
+                <h3>CRANIX</h3>
+              </ng-template>
+            </ion-label>
+          </ion-item>
+        </ion-list-header>
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+          <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false">
+            <ion-icon size="small" color="#ffffff" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'">
+            </ion-icon>
+            <ion-label>{{ p.title | translate }}</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-split-pane>
