--- a/src/app/protected/cranix/system/config/system-config.component.html
+++ b/src/app/protected/cranix/system/config/system-config.component.html
@@ -1,3 +1,41 @@
-<p>
-  system-config works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>edit</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-row class="header-row">
+  <ion-col size=12>
+    <ion-card-title color="primary">{{ 'System configuration' | translate}}</ion-card-title>
+  </ion-col>
+</ion-row>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-segment (ionChange)="segmentChanged($event)">
+        <ion-segment-button value="Basis">
+          <ion-label>{{'Basis configuration' | translate}}</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="Settings">
+          <ion-label>{{'Settings' | translate}}</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="Backup">
+          <ion-label>{{'Backup' | translate}}</ion-label>
+        </ion-segment-button>
+      </ion-segment>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+        <div *ngFor="let config of configs" [ngSwitch]="config.type">
+          <ion-row *ngIf="config.path == toShow">
+            <ion-col size=4>
+              <ion-label>{{config.key}}</ion-label>
+            </ion-col>
+            <ion-col size=6>
+              <ion-label>{{config.value}}</ion-label>
+            </ion-col>
+          </ion-row>
+        </div>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
