--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -10,38 +10,35 @@
       <ion-icon name="arrow-forward-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="add-circle-outline" (click)="addEditSet(null)"></ion-icon>
+      <ion-fab-button *ngIf="segment == 'list'" (click)="addStatus()">
+        <ion-icon name="add-circle" ></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="pencil-outline" (click)="applyState()"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="refresh-outline" (click)="applyState()"></ion-icon>
+      <ion-fab-button (click)="restartFirewall()">
+        <ion-icon name="refresh"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
   <ion-card>
-    <ion-card-header class="hidden-xs hidden-sm hidden-md">
-      <ion-row class="hidden-xs hidden-sm hidden-md">
-        <ion-col size="3" class="ion-align-items-center">
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="setFilterChanged()" id="installationSetFilter">
-            </ion-input>
-          </ion-item>
+    <ion-card-header>
+      <ion-row>
+        <ion-col size="12" size-lg="6" size-xl="6">
+          <ion-segment (ionChange)="segmentChanged($event)">
+            <ion-segment-button value="list">
+              <ion-label>{{'Room access rules' | translate}}</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="status">
+              <ion-label>{{'Actual status' | translate}}</ion-label>
+            </ion-segment-button>
+          </ion-segment>
         </ion-col>
-        <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="addEditSet(null)"
-            matTooltip="{{'Create a new installation set.' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+        <ion-col offset="3" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
+          <ion-button *ngIf="segment == 'list'" size="small" (click)="addStatus()"
+            matTooltip="{{'Add new room access status.' | translate }}">
+            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="writeConfig()"
-            matTooltip="{{'Write state files for the devices.' | translate }}">
-            <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
-          </ion-button>
-          <ion-button size="small" (click)="applyState()"
-            matTooltip="{{'Apply state on all running devices.' | translate }}">
-            <ion-icon slot="icon-only" name="refresh-outline"></ion-icon>
+          <ion-button size="small" (click)="restartFirewall()"
+            matTooltip="{{'Restart firewall.' | translate }}">
+            <ion-icon slot="icon-only" name="refresh"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
