--- a/src/app/protected/cranix/devices/add-device/add-device.component.html
+++ b/src/app/protected/cranix/devices/add-device/add-device.component.html
@@ -1,27 +1,26 @@
-<div *ngIf="addDeviceForm">
-  <form [formGroup]="addDeviceForm" (ngSubmit)="onSubmit(addDeviceForm.value)">
-    <ion-header translucent>
-      <ion-toolbar>
-        <ion-title>{{  'Add device' | translate }}</ion-title>
-        <ion-buttons slot="end" *ngIf="addDeviceForm">
-          <ion-button (click)="onSubmit(addDeviceForm.value)" class="ion-no-margin"
-            [disabled]="!addDeviceForm.valid || disabled">
-            <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
-          </ion-button>
-          <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()">
-            <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content fullscreen *ngIf="addDeviceForm">
-      <ion-list lines="full">
-        <ion-item *ngIf="roomsToSelect && device">
-          <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
-          <ionic-selectable
+<form #addDeviceForm="ngForm">
+  <ion-header translucent>
+    <ion-toolbar>
+      <ion-title >{{ 'Add device' | translate }}</ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="onSubmit()" class="ion-no-margin"
+          [disabled]="!addDeviceForm.form.valid || disabled || !macOk || !device.roomId">
+          <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()">
+          <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content fullscreen>
+    <ion-list lines="full">
+      <ion-item>
+        <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
+        <ionic-selectable
+          *ngIf="!selectedRoom"
           #ionicSelectable
-          (onChange)="roomChanged($event)"
-          item-content
+          (onChange)="roomChanged($event.value)"
           [items]="roomsToSelect"
           itemValueField="id"
           itemTextField="name"
@@ -29,7 +28,7 @@
           <ng-template ionicSelectableHeaderTemplate>
             <ion-toolbar>
               <ion-title>
-              {{ "Select a Room" | translate }}
+                {{ "Select a Room" | translate }}
               </ion-title>
               <ion-buttons slot="end">
                 <ion-button ion-button (click)="ionicSelectable.close()">
@@ -42,61 +41,61 @@
             <div></div>
           </ng-template>
         </ionic-selectable>
-          <!-- ion-select type="text" formControlName="roomId" (ionChange)="roomChanged($event)"
-            [compareWith]="objectService.compareFn">
-            <ion-select-option *ngFor="let room of roomsToSelect | async" value="{{room.id}}">{{room.name}}
-            </ion-select-option>
-          </ion-select -->
-        </ion-item>
-        <ion-item *ngIf="!addHocRooms && device && ipAdresses">
-          <ion-label position="stacked">{{'ip'| translate}}</ion-label>
-          <ion-select type="text" formControlName="ip" (ionChange)="ipChanged($event)">
-            <ion-select-option *ngFor="let ip of ipAdresses " value="{{ip}}">{{ip.split(' ')[0]}}</ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-item *ngIf="device">
-          <ion-label position="stacked">{{'name'|translate}}</ion-label>
-          <ion-input type="text" formControlName="name" name="name"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!addHocRooms">
-          <ion-label position="stacked">{{'hwconfId'| translate}}</ion-label>
-          <ion-select formControlName="hwconfId" [compareWith]="objectService.compareFn">
-            <ion-select-option *ngFor="let hw of hwConfs | async" value="{{hw.id}}">
-              {{hw.name}}
-            </ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-item *ngIf="!addHocRooms; else room">
+        <ion-input *ngIf="selectedRoom" [value]="selectedRoom.name" disabled></ion-input>
+      </ion-item>
+      <ion-item *ngIf="!adHocRoom && ipAdresses">
+        <ion-label position="stacked">{{'ip'| translate}}</ion-label>
+        <ion-select type="text" [(ngModel)]="device.ip" name="ip" (ionChange)="ipChanged($event)">
+          <ion-select-option *ngFor="let ip of ipAdresses " value="{{ip}}">{{ip.split(' ')[0]}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">{{'name'|translate}}</ion-label>
+        <ion-input type="text" [(ngModel)]="device.name" name="name" required></ion-input>
+      </ion-item>
+      <ion-item *ngIf="!adHocRoom">
+        <ion-label position="stacked">{{'hwconfId'| translate}}</ion-label>
+        <ion-select [(ngModel)]="device.hwconfId" name="hwconfId" [compareWith]="objectService.compareFn" required>
+          <ion-select-option *ngFor="let hw of hwConfs" value="{{hw.id}}">
+            {{hw.name}}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="!adHocRoom; else room">
+        <ion-label position="stacked">{{'mac'|translate}}</ion-label>
+        <ion-textarea type="text" [(ngModel)]="device.mac" name="mac" [color]="macOk ? 'dark' : 'danger'"
+          (ionChange)="checkMac($event)" required>
+        </ion-textarea>
+      </ion-item>
+      <ng-template #room>
+        <ion-item>
           <ion-label position="stacked">{{'mac'|translate}}</ion-label>
-          <ion-textarea type="text" formControlName="mac" [value]="authService.session.mac"></ion-textarea>
+          <ion-input type="text" [(ngModel)]="device.mac" name="mac"
+            pattern="/^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$/" required>
+          </ion-input>
         </ion-item>
-        <ng-template #room>
-          <ion-item>
-            <ion-label position="stacked">{{'mac'|translate}}</ion-label>
-            <ion-input type="text" formControlName="mac" [value]="authService.session.mac"></ion-input>
-          </ion-item>
-        </ng-template>
-        <ion-item *ngIf="!addHocRooms">
-          <ion-label position="stacked">{{'wlanMac'|translate}}</ion-label>
-          <ion-input type="text" formControlName="wlanMac"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!addHocRooms">
-          <ion-label position="stacked">{{'serial'|translate}}</ion-label>
-          <ion-input type="text" formControlName="serial"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!addHocRooms">
-          <ion-label position="stacked">{{'inventary'|translate}}</ion-label>
-          <ion-input type="text" formControlName="inventary"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!addHocRooms">
-          <ion-label position="stacked">{{'row'|translate}}</ion-label>
-          <ion-input type="text" formControlName="row"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!addHocRooms">
-          <ion-label position="stacked">{{'place'|translate}}</ion-label>
-          <ion-input type="text" formControlName="place"></ion-input>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </form>
-</div>
+      </ng-template>
+      <ion-item *ngIf="!adHocRoom">
+        <ion-label position="stacked">{{'wlanMac'|translate}}</ion-label>
+        <ion-input type="text" [(ngModel)]="device.wlanMac" name="wlanMac"
+          pattern="/^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$/"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="!adHocRoom">
+        <ion-label position="stacked">{{'serial'|translate}}</ion-label>
+        <ion-input type="text" [(ngModel)]="device.serial" name="serial"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="!adHocRoom">
+        <ion-label position="stacked">{{'inventary'|translate}}</ion-label>
+        <ion-input type="text" [(ngModel)]="device.inventary" name="inventary"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="!adHocRoom">
+        <ion-label position="stacked">{{'row'|translate}}</ion-label>
+        <ion-input type="text" [(ngModel)]="device.row" name="row"></ion-input>
+      </ion-item>
+      <ion-item *ngIf="!adHocRoom">
+        <ion-label position="stacked">{{'place'|translate}}</ion-label>
+        <ion-input type="text" [(ngModel)]="device.place" name="place"></ion-input>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</form>
